Changed breakpoints for menu to avoid overlapping with logo

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -43,8 +43,12 @@
 .nav {
   font-size: @fontSizeM;
 
-  @media (max-width: 900px) {
+  @media (max-width: 1050px) {
     font-size: @fontSizeS;
+  }
+
+  @media (max-width: 860px) {
+    font-size: @fontSizeXS;
   }
 }
 
